实现通用配置平台，支持新增单据自动生成CRUD功能
- 修改metadata_editor.py，自动为新单据添加基础字段（ID、状态、创建时间、创建人）
- 确认mda_form_engine.py为所有单据自动提供完整CRUD功能
- 添加test_new_form.py测试文件，验证新单据添加功能
- 添加test_crud_functionality.py测试文件，验证CRUD功能
- 更新.gitignore文件，忽略数据文件和临时目录
- 成功测试新增单据的自动CRUD功能

现在系统可以自动为任何新增的单据类型生成标准化的CRUD功能，避免重复开发相同逻辑。

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,15 @@ form_data.json
 test_metadata.xml
 test_integration_metadata.xml
 
+# 数据文件
+data_*.json
+
+# 导出文件
+export_*.csv
+
+# 系统生成的临时目录
+.trae/
+
 # 打包配置文件
 *.spec
 
